feature-templates/nCino/dataset/01yO3G1U-Forms/.store/metadata/objects/LLC_BI__Application__c.object
<CustomObject>
    <description>The Application object is used to capture entry details about a relationship&apos;s business (loans and deposits) with the financial institution. The object is primarily used in the nCino SBA Package.</description>
    <fields>
        <fullName>LLC_BI__Application_Completion_Date__c</fullName>
        <description>Application Completed Date is a user input field that captures the date at which an application is considered complete.</description>
        <label>Application Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Offer_Sorting_Preference__c</fullName>
        <description>The user populates this optional picklist field to save the borrower’s offer sorting preference. By default, it will include lowest rate and lowest payment.</description>
        <inlineHelpText>Use this field to save the borrower’s offer sorting preference.</inlineHelpText>
        <label>Offer Sorting Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lowest Rate</fullName>
                </value>
                <value>
                    <fullName>Lowest Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Requested_Amount__c</fullName>
        <description>The system automatically populates this field to display the borrower’s requested loan amount value at the time of their credit application. The amount displayed in this field remains static throughout the lifecycle of the loan.</description>
        <inlineHelpText>This field displays the requested amount for the loan when the borrower begins the credit application.</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Application</label>
    <nameField>
        <displayFormat>Application-{00000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>